add query for tasks with task name or task category

--- a/lizetest/category/templates/category_list.html
+++ b/lizetest/category/templates/category_list.html
@@ -12,6 +12,6 @@
   </li>
   {% endfor %}
 </ul>
-<a href="{% url 'category:category_create' %}">Adicioanar mais categorias</a> <hr>
+<a href="{% url 'category:category_create' %}">Adicionar mais categorias</a> <hr>
 <a href="{% url 'todo:task_list' %}">Voltar para lista de tasks</a>
 {% endblock %}
