--- a/lizetest/accounts/templates/registration/login.html
+++ b/lizetest/accounts/templates/registration/login.html
@@ -5,7 +5,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
   <a href="{% url 'accounts:signup' %}">Don't have an account? Sign up here.</a>
 {% endblock %}
