--- a/lizetest/category/templates/category_list.html
+++ b/lizetest/category/templates/category_list.html
@@ -11,19 +11,30 @@
 
     <div class="col">
       <h2 style="padding-top: 15px;">Lista de categorias</h2><br>
-      <ul>
-        {% for categoria in categorias %}
-        <li>
-          {{ categoria.name }}
-          <a href="{% url 'category:category_edit' pk=categoria.pk %}">Editar</a>
-          <a href="{% url 'category:category_delete' pk=categoria.pk %}">Remover</a>
 
-        </li>
-        {% endfor %}
-      </ul>
-      <a href="{% url 'category:category_create' %}">Adicionar mais categorias</a>
-      <hr>
-      <a href="{% url 'todo:task_list' %}">Voltar para lista de tasks</a>
+
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for categoria in categorias %}
+          <tr>
+            <td>{{categoria.name}}</td>
+            <td>
+              <a href="{% url 'category:category_edit' pk=categoria.pk %}">
+                Editar
+              </a>
+            </td>
+            <td><a href="{% url 'category:category_delete' pk=categoria.pk %}">Remover</a></td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
       {% endblock %}
     </div>
 
