--- a/lizetest/todo/templates/task_form.html
+++ b/lizetest/todo/templates/task_form.html
@@ -1,12 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>{% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Edit{% endif %} Task</h2>
-  <form method="post" enctype="multipart/form-data">
+<div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+  <h2 style="text-align: center; margin-bottom: 20px;">
+    {% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Edit{% endif %} Task
+  </h2>
+  <form method="post" enctype="multipart/form-data" style="width: 400px; border: 1px solid #ccc; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgb(0, 0, 0);">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="btn btn-primary" type="submit">{% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Save Changes{% endif %}</button>
+    <button class="btn btn-primary" type="submit" style="width: 100%; padding: 10px;">
+      {% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Save Changes{% endif %}
+    </button>
   </form>
-  Caso deseje você pode criar uma nova categoria aqui <a href="{% url 'category:category_create' %}">Criar categoria</a> <hr>
-  <a href="{% url 'todo:task_list' %}">Back to Task List</a>
+  <div style="text-align: center; margin-top: 20px;">
+    Caso deseje você pode criar uma nova categoria aqui 
+    <a href="{% url 'category:category_create' %}">Criar categoria</a> <hr>
+    <a href="{% url 'todo:task_list' %}">Volte para a lista de tarefas</a>
+  </div>
+</div>
 {% endblock %}
