--- a/lizetest/category/templates/category_list.html
+++ b/lizetest/category/templates/category_list.html
@@ -13,12 +13,12 @@
       <h2 style="padding-top: 15px;">Lista de categorias</h2><br>
 
 
-      <table class="table table-striped">
+      <table class="table table-bordered">
         <thead>
-          <tr>
+          <tr class="table-dark">
             <th scope="col">Nome</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
+            <th scope="col">Editar</th>
+            <th scope="col">Deletar</th>
           </tr>
         </thead>
         <tbody>
@@ -27,10 +27,13 @@
             <td>{{categoria.name}}</td>
             <td>
               <a href="{% url 'category:category_edit' pk=categoria.pk %}">
-                Editar
+                <button type="button" class="btn btn-outline-primary">Editar</button>
               </a>
             </td>
-            <td><a href="{% url 'category:category_delete' pk=categoria.pk %}">Remover</a></td>
+            <td><a href="{% url 'category:category_delete' pk=categoria.pk %}">
+              <button type="button" class="btn btn-outline-danger">Deletar</button>
+            </a>
+          </td>
           </tr>
           {% endfor %}
         </tbody>
