--- a/lizetest/todo/templates/task_confirm_delete.html
+++ b/lizetest/todo/templates/task_confirm_delete.html
@@ -3,6 +3,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2>Confirm Deletion</h2>
   <p>Are you sure you want to delete the task "{{ object.title }}"?</p>
   <form method="post">
@@ -10,4 +11,5 @@
     <button type="submit">Confirm</button>
   </form>
   <a href="{% url 'todo:task_list' %}">Cancel</a>
+</div>
 {% endblock %}
