--- a/lizetest/todo/templates/task_list.html
+++ b/lizetest/todo/templates/task_list.html
@@ -9,6 +9,26 @@
     <div class="col">
       <h2 style="padding-top: 15px;">Lista de tarefas</h2><br>
 
+      <div id="myPopup" style="
+      width: 200px;
+      height: 150px;
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      padding: 20px;
+      border: 1px solid #ccc;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      z-index: 9999;
+      padding: 10px;
+      ">
+        <p>Confirma que quer deletar essa task?</p>
+        <input type="button" class="btn btn-outline-success" onclick="closePopup()" value="Cancelar">
+        <input type="button" class="btn btn-outline-danger" onclick="deletetask()" value="Deletar">
+      </div>
+
       <form method="GET" action="{% url 'todo:task_list' %}">
         <input type="text" name="query_task" placeholder="Pesquisa por nome ou categorias da task"
           style="width: 100%;max-width: 300px;">
@@ -16,31 +36,37 @@
       </form><br>
 
       <p>Encontramos {{number_tasks}} tasks para você</p>
-
-      <table class="table table-striped">
+      <table class="table table-bordered">
         <thead>
-          <tr>
+          <tr class="table-dark">
             <th scope="col">Nome</th>
             <th scope="col">Descrição</th>
             <th scope="col">Categoria</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
+            <th scope="col">Editar</th>
+            <th scope="col">Deletar</th>
+            <th scope="col">Validar</th>
           </tr>
         </thead>
         <tbody>
           {% for task in tasks %}
-          <tr>
+          <tr class="{% if task.completed %}table-success{% else %}{% endif %}">
             <td>{{task.title}}</td>
             <td>{{task.description}}</td>
-            <td>{{ task.category }}</td>
+            <td>{{task.category}}</td>
             <td>
               <a href="{% url 'todo:task_edit' pk=task.pk %}">
                 <button type="button" class="btn btn-outline-primary">Editar</button>
               </a>
             </td>
             <td>
-              <a href="{% url 'todo:task_delete' pk=task.pk %}">
-                <button type="button" class="btn btn-outline-danger">Deletar</button>
+              <a>
+                <button type="button" class="btn btn-outline-danger" id="btn-delete" data-task-id="{{ task.pk }}">Deletar</button>
+              </a>
+            </td>
+            <td>
+              <a href="{% url 'todo:task_edit' pk=task.pk %}">
+                <!-- <button type="button" class="{% if task.completed %}btn btn-success{% else %}btn btn-outline-success{% endif %}">Completa</button> -->
+                <input data-task-id="{{ task.pk }}" class="form-check" type="checkbox" id="flexSwitchCheckChecked"  {% if task.completed %}checked{% endif %}> 
               </a>
             </td>
           </tr>
@@ -53,6 +79,35 @@
 </div>
 
 <script>
+
+function exibirpopup() {
+  document.getElementById("myPopup").style.display = "block";
+}
+
+function closePopup() {
+  document.getElementById("myPopup").style.display = "none";
+}
+
+document.getElementById("btn-delete").addEventListener("click",exibirpopup);
+
+  function deletetask() {
+    const btn = document.getElementById('btn-delete')
+    const id_task = btn.getAttribute('data-task-id')
+
+    fetch(`http://localhost:8000/altertask/delete/${id_task}`, {
+      method: 'GET',
+    })
+      .then(response => response.json())
+      .then(data => {
+        console.log('Success:', data);
+        // Opcional: Atualize a interface do usuário com base na resposta
+        window.location.reload();
+      })
+      .catch((error) => {
+        console.error('Error:', error);
+      });
+  }
+
   function alter(event) {
     const checkbox = event.target;
     const id_task = checkbox.getAttribute('data-task-id')
@@ -64,13 +119,15 @@
       .then(data => {
         console.log('Success:', data);
         // Opcional: Atualize a interface do usuário com base na resposta
+        window.location.reload();
       })
       .catch((error) => {
         console.error('Error:', error);
       });
+      closePopup()
   }
 
-  document.querySelectorAll('.completed_checkbox').forEach(checkbox => {
+  document.querySelectorAll('.form-check').forEach(checkbox => {
     checkbox.addEventListener('change', alter);
   });
 
