--- a/lizetest/todo/templates/task_list.html
+++ b/lizetest/todo/templates/task_list.html
@@ -44,7 +44,7 @@
             <th scope="col">Categoria</th>
             <th scope="col">Editar</th>
             <th scope="col">Deletar</th>
-            <th scope="col">Validar</th>
+            <th scope="col">Feito</th>
           </tr>
         </thead>
         <tbody>
@@ -55,12 +55,12 @@
             <td>{{task.category}}</td>
             <td>
               <a href="{% url 'todo:task_edit' pk=task.pk %}">
-                <button type="button" class="btn btn-outline-primary">Editar</button>
+                <button type="button" class="btn btn-outline-primary btn-delete">Editar</button>
               </a>
             </td>
             <td>
               <a>
-                <button type="button" class="btn btn-outline-danger" id="btn-delete" data-task-id="{{ task.pk }}">Deletar</button>
+                <button type="button" class="btn btn-outline-danger btn-delete" data-task-id="{{ task.pk }}" data-task-name="{{task.title}}">Deletar</button>
               </a>
             </td>
             <td>
@@ -81,30 +81,31 @@
 <script>
 
 function exibirpopup() {
+  const id_task = this.getAttribute('data-task-id');
   document.getElementById("myPopup").style.display = "block";
+  document.getElementById("myPopup").setAttribute('data-task-id',id_task);
 }
 
 function closePopup() {
   document.getElementById("myPopup").style.display = "none";
 }
 
-document.getElementById("btn-delete").addEventListener("click",exibirpopup);
+document.querySelectorAll(".btn-delete").forEach(button => {
+    button.addEventListener("click", exibirpopup);
+});
 
   function deletetask() {
-    const btn = document.getElementById('btn-delete')
-    const id_task = btn.getAttribute('data-task-id')
 
+    const id_task = document.getElementById('myPopup').getAttribute('data-task-id')
     fetch(`http://localhost:8000/altertask/delete/${id_task}`, {
       method: 'GET',
     })
       .then(response => response.json())
       .then(data => {
-        console.log('Success:', data);
         // Opcional: Atualize a interface do usuário com base na resposta
         window.location.reload();
       })
       .catch((error) => {
-        console.error('Error:', error);
       });
   }
 
@@ -117,12 +118,10 @@ document.getElementById("btn-delete").addEventListener("click",exibirpopup);
     })
       .then(response => response.json())
       .then(data => {
-        console.log('Success:', data);
         // Opcional: Atualize a interface do usuário com base na resposta
         window.location.reload();
       })
       .catch((error) => {
-        console.error('Error:', error);
       });
       closePopup()
   }
