--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -8,7 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>To-Do List</title>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow-x: hidden;">
     {% block content %}
     {% endblock content %}
 </body>
