create template of popup and fix bugs

--- a/lizetest/core/templates/sidebar.html
+++ b/lizetest/core/templates/sidebar.html
@@ -40,7 +40,7 @@
 <script>
     function changepag() {
         console.log('clicou no btn-signup')
-        window.location.href = '/accounts/login';
+        window.location.href = '/accounts/singout';
     }
     btn = document.getElementById('btn-signup').addEventListener('click', changepag)
 </script>
