--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -7,7 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>To-Do List</title>
+    <style>
+        #btn-signout:hover {
+            background-color:#0d6efd;
+        }
+    </style>
 </head>
+
 <body style="overflow-x: hidden;">
     {% block content %}
     {% endblock content %}
