--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -9,7 +9,25 @@
     <title>To-Do List</title>
     <style>
         #btn-signout:hover {
-            background-color:#0d6efd;
+            background-color: #0d6efd;
+        }
+
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        .blink {
+            animation: blink 1s infinite;
         }
     </style>
 </head>
