stylization filter of category and name

--- a/lizetest/accounts/templates/registration/login.html
+++ b/lizetest/accounts/templates/registration/login.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div id="form-login">
-  <h2 style="text-align: center;">Login</h2>
-  <div style="display: flex; justify-content: center; padding: 20px;">
+  <div style="display: flex; justify-content: center; padding: 20px; padding-top: 10%;">
     <form method="post"
       style="width: 300px; border: 1px solid #ccc; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0);">
       {% csrf_token %}
