--- a/lizetest/todo/templates/task_list.html
+++ b/lizetest/todo/templates/task_list.html
@@ -19,9 +19,11 @@
       <table class="table table-bordered">
         <thead>
           <tr class="table-dark">
-            <th onclick="alterfilter(this)" class="filter-header" data-field="title" scope="col">Nome ↕</th>
+            <th onclick="alterfilter(this)" class="filter-header" data-field="title" scope="col">Nome<span style="float: right;">↕</span>
+
+            </th>
             <th scope="col">Descrição</th>
-            <th scope="col" onclick="alterfilter(this)" class="filter-header" data-field="category">Categoria ↕</th>
+            <th scope="col" onclick="alterfilter(this)" class="filter-header" data-field="category">Categoria<span style="float: right;">↕</span></th>
             <th scope="col">Data</th>
             <th scope="col">Editar</th>
             <th scope="col">Deletar</th>
