create feature add date_complete if task complete

--- a/lizetest/todo/templates/task_list.html
+++ b/lizetest/todo/templates/task_list.html
@@ -18,13 +18,13 @@
       <p>Encontramos {{number_tasks}} tarefas para você</p>
       <table class="table table-bordered">
         <thead>
-          <tr class="table-dark">
-            <th onclick="alterfilter(this)" class="filter-header" data-field="title" scope="col">Nome<span style="float: right;">↕</span>
-
+          <tr class="table-dark" style="white-space: nowrap;">
+            <th onclick="alterfilter(this)" class="filter-header" data-field="title" scope="col">Nome<span style="float: right;white-space: nowrap;";>↕</span>
             </th>
             <th scope="col">Descrição</th>
-            <th scope="col" onclick="alterfilter(this)" class="filter-header" data-field="category">Categoria<span style="float: right;">↕</span></th>
-            <th scope="col">Data</th>
+            <th scope="col" onclick="alterfilter(this)" class="filter-header" data-field="category" style="min-width: 120px;">Categoria<span style="float: right;">↕</span></th>
+            <th scope="col">Data criação</th>
+            <th scope="col">Data completo</th>
             <th scope="col">Editar</th>
             <th scope="col">Deletar</th>
             <th scope="col">Feito</th>
@@ -37,6 +37,8 @@
             <td>{{task.description}}</td>
             <td>{{task.category}}</td>
             <td>{{task.created_at}}</td>
+            <td>{% if task.completion_date == None %}Não completo{% else %}{{task.completion_date}}{% endif %}</td>
+            <!-- <td>{{task.completion_date}}</td> -->
             <td>
               <a href="{% url 'todo:task_edit' pk=task.pk %}">
                 <button type="button" class="btn btn-outline-primary btn-delete">Editar</button>
